--- a/src/app.css
+++ b/src/app.css
@@ -180,13 +180,11 @@ body {
 }
 
 .button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding-left: 10px;
 }
 
 .button button {
-  padding: 2px 10px 2px 10px;
+  padding: 5px 10px 5px 10px;
   font-size: 16px;
   border-style: solid;
   border-color: #333;
